--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: system-ui, sans-serif;
+    min-height: 100vh;
+    background: linear-gradient(140deg, rgb(165, 142, 251), rgb(233, 191, 248));
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*:after,
+*:before {
+    box-sizing: border-box;
+}
+
+pre {
+    max-width: 720px;
+    margin: 20px;
+    padding: 20px;
+    border: 10px solid black;
 }
