WIP. box. clean up handles styles

--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -1,13 +1,12 @@
 .box {
     position: absolute;
-    height: 100px;
-    width: 100px;
+    // width: 100px;
+    // height: 100px;
+
     outline: none;
     touch-action: none;
     background-size: cover;
     background-repeat: no-repeat;
-    -webkit-user-select: none;
-    -webkit-user-drag: none;
     user-select: none;
 }
 
@@ -15,25 +14,26 @@
     z-index: 100;
 }
 
+.box.selected .handle {
+    opacity: 1;
+}
+
 .handle {
-    touch-action: none;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     background: transparent;
     opacity: 0;
+    touch-action: none;
     z-index: 10;
-}
-
-.box.selected .handle {
-    opacity: 1;
 }
 
 .handle.position {
     width: 100%;
     height: 100%;
     z-index: 1;
+
     box-shadow: 0 0 0 1px #18a0fb;
     border: 1px solid #18a0fb;
 }
@@ -43,65 +43,66 @@
 $handle-size: 10px;
 $handle-half: calc($handle-size / 2);
 
-.handle.left {
-    left: -$handle-half;
-}
+.handle {
+    &.left {
+        left: -$handle-half;
+    }
 
-.handle.right {
-    right: -$handle-half;
-}
+    &.right {
+        right: -$handle-half;
+    }
 
-.handle.top {
-    top: -$handle-half;
-}
+    &.top {
+        top: -$handle-half;
+    }
 
-.handle.bottom {
-    bottom: -$handle-half;
-}
+    &.bottom {
+        bottom: -$handle-half;
+    }
 
-.handle.left,
-.handle.right {
-    top: $handle-half;
-    width: 10px;
-    height: calc(100% - $handle-size);
-    cursor: ew-resize;
-}
+    &.left,
+    &.right {
+        top: $handle-half;
+        width: 10px;
+        height: calc(100% - $handle-size);
+        cursor: ew-resize;
+    }
 
-.handle.top,
-.handle.bottom {
-    left: $handle-half;
-    width: calc(100% - $handle-size);
-    height: $handle-size;
-    cursor: ns-resize;
-}
+    &.top,
+    &.bottom {
+        left: $handle-half;
+        width: calc(100% - $handle-size);
+        height: $handle-size;
+        cursor: ns-resize;
+    }
+    &.corner {
+        height: $handle-size;
+        width: $handle-size;
+        background: #fff;
+        border: 1px solid #18a0fb;
 
-.handle.corner {
-    height: $handle-size;
-    width: $handle-size;
-    background: #fff;
-    border: 1px solid #18a0fb;
-}
-
-.handle.corner.top-left {
-    top: -$handle-half;
-    left: -$handle-half;
-    cursor: nwse-resize;
-}
-
-.handle.corner.bottom-left {
-    bottom: -$handle-half;
-    left: -$handle-half;
-    cursor: nesw-resize;
-}
-
-.handle.corner.top-right {
-    top: -$handle-half;
-    right: -$handle-half;
-    cursor: nesw-resize;
-}
-
-.handle.corner.bottom-right {
-    bottom: -$handle-half;
-    right: -$handle-half;
-    cursor: nwse-resize;
+        &.top-left {
+            top: -$handle-half;
+            left: -$handle-half;
+            cursor: nwse-resize;
+        }
+        
+        &.bottom-left {
+            bottom: -$handle-half;
+            left: -$handle-half;
+            cursor: nesw-resize;
+        }
+        
+        &.top-right {
+            top: -$handle-half;
+            right: -$handle-half;
+            cursor: nesw-resize;
+        }
+        
+        &.bottom-right {
+            bottom: -$handle-half;
+            right: -$handle-half;
+            cursor: nwse-resize;
+        }
+    }
 }
